SynProdGITV1/force-app/main/default/objects/Complaint_Cost__c/Complaint_Cost__c.object-meta.xml
<CustomObject>
    <description>Cost of complaints</description>
    <label>Complaint Cost</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Complaint Cost No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Cost</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>