SynProdGITV1/force-app/main/default/objects/Complaint_Cost__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>Reference to the associated Case record. Links the complaint cost entry to its related complaint for tracking and reporting</description>
    <label>Case Id</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Complaint Cost</relationshipLabel>
    <relationshipName>Complaint_Cost</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>