SynProdGITV1/force-app/main/default/objects/Complaint_Cost__c/fields/Complaint_Cost_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Cost_External_Id__c</fullName>
    <description>Complaint cost external id used for data migration</description>
    <externalId>true</externalId>
    <label>Complaint Cost External Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>