SynProdGITV1/force-app/main/default/objects/Complaint_Cost__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <description>Category of the cost incurred due to the complaint, such as logistics, quality, commercial, or production cost</description>
    <label>Cost Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Outside Lab Analysis</fullName>
            </value>
            <value>
                <fullName>Equipment Calibration/Repair</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Training Cost</fullName>
            </value>
            <value>
                <fullName>Labour Cost</fullName>
            </value>
            <value>
                <fullName>3rd Party Support Cost</fullName>
            </value>
            <value>
                <fullName>Cleaning Cost</fullName>
            </value>
            <value>
                <fullName>Disposal Cost</fullName>
            </value>
            <value>
                <fullName>Material Cost</fullName>
            </value>
            <value>
                <fullName>Logistics Cost</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>