SynProdGITV1/force-app/main/default/objects/Complaint_Cost__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Monetary value associated with the individual cost item related to the complaint, such as refund or replacement value.</description>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>